--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ FLASK_SECRET_KEY=secretkey
 FLASK_APP=app.py
 FLASK_ENV=development
 
-MAIL_USERNAME=varuns2452@gmail.com
-MAIL_PASSWORD=vhzuwjcbdrvgdyop
+MAIL_USERNAME='YOUR_EMAIL'
+MAIL_PASSWORD='YOUR_MAIL_PASSWORD'
 
 SERIALIZER_KEY=serializerkey
